# launch-claude

./: .gitignore  CLAUDE.md  DOCUMENTACION_TECNICA.md  LICENSE  README.md  build.bat  build.sh  ccl.spec  claude_launch.spec  config.json.example  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: ccl  cl.bat
src/claude_launch/: __init__.py  _commit.py  cli.py  config.py  console.py  launcher.py  main.py  ollama_api.py
tests/: test_cli.py  test_config.py
