[project]
name = "claude-launch"
version = "1.0.0"
description = "Lanzador de Claude Code con múltiples providers Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "click>=8.1.7",
]

[project.scripts]
cl = "claude_launch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_launch"]

[tool.nuitka]
# Configuración para compilación con nuitka
output-format = "binary"
onefile = true
strip = true
linux-python-subdir = "python3"
